--- a/static_all/local_css.css
+++ b/static_all/local_css.css
@@ -3,3 +3,13 @@
   /*margin-left: auto;*/
   /*margin-right: auto;*/
 /*}*/
+#testform{
+    float: left;
+}
+
+#result{
+    /*float: left;*/
+    margin:auto auto;
+    height: 30px;
+    text-align:center;
+}
